fixing profile services spacing

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -144,12 +144,12 @@
     }
 
     .clients_collabs {
-      margin-bottom: 60px;
+      margin-bottom: 15px;
     }
 
     .offerings {
       ul {
-        margin-bottom: 30px;
+        margin-bottom: 15px;
       }
     }
 
